--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <input
                 type="text"
                 class="form-control form-control-lg bg-light fs-6"
-                placeholder="Usuario"
+                placeholder="Correo o usuario"
               />
             </div>
 
