pantalla de login y registro terminada con navegacion

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -10,7 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/pages/login/login.css" />
     <title>FocusED</title>
   </head>
   <body>
@@ -29,7 +30,7 @@
         >
           <!-- LOGO -->
           <div class="featured-image mb-5">
-            <img src="images/logo.png" class="img-fluid" />
+            <img src="/images/logo.png" class="img-fluid" />
           </div>
 
           <!-- TITULO PRINCIPAL -->
@@ -77,7 +78,10 @@
 
             <!-- LINK CREAR CUENTA -->
             <div class="row text-center">
-              <small>¿No tienes una cuenta? <a href="#">Crear Cuenta</a></small>
+              <small
+                >¿No tienes una cuenta?
+                <a href="/pages/registro/registro.html">Crear Cuenta</a></small
+              >
             </div>
           </div>
         </div>
