--- a/inicio.html
+++ b/inicio.html
@@ -11,9 +11,9 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="user-profile">
-                <img src="user.png" alt="User" class="profile-pic">
-                <h2>Alejandro Torres</h2>
-                <p>Estudiante de Informática</p>
+                <img src="icons.jpg" alt="User" class="profile-pic">
+                <h2>Shari elena </h2>
+                <p> Vendedora de peto </p>
             </div>
             <nav>
                 <ul>
