elaboracion de sidebar y maquetado de pantalla de inicio

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -70,10 +70,14 @@
             </div>
 
             <!-- BOTÓN DE INICIAR SESION -->
+            <!-- BOTÓN DE INICIAR SESION -->
             <div class="input-group mb-3">
-              <button class="btn btn-lg w-100 fs-6 boton-iniciar">
+              <a
+                href="/pages/dashboard/dashboard.html"
+                class="btn btn-lg w-100 fs-6 boton-iniciar"
+              >
                 Iniciar sesión
-              </button>
+              </a>
             </div>
 
             <!-- LINK CREAR CUENTA -->
