--- a/pages/dashboard/sections/calendario/calendario.html
+++ b/pages/dashboard/sections/calendario/calendario.html
@@ -12,7 +12,7 @@
     <div class="sidebar">
         <div class="user-profile">
             <img src="icons.jpg" alt="User" class="profile-pic">
-            <h2>Shari Elena</h2>
+            <h2>Pedro hernandez</h2>
             <p>Vendedora de Peto</p>
         </div>
         <nav>
