corrigiendo errores y agregando calendario al sidebar

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -71,11 +71,20 @@
             <i class="fa-solid fa-chart-column"></i> Estadisticas
             </a>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="sections/calendario/calendario.html"
+              target="content-frame"
+            >
+            <i class="fa-solid fa-calendar"></i> Calendario
+            </a>
+          </li>
         </ul>
       </nav>
 
       <!-- Main Content -->
-      <div class="main-content p-4 flex-grow-1">
+      <div class="main-content flex-grow-1">
         <iframe
           name="content-frame"
           src="/pages/dashboard/sections/home/home.html"
