--- a/pages/dashboard/sections/calendario/calendario.html
+++ b/pages/dashboard/sections/calendario/calendario.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario</title>
-    <link rel="stylesheet" href="agenda.css">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="calendario.css">
 </head>
 <body>
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <div class="user-profile">
-            <img src="icons.jpg" alt="User" class="profile-pic">
-            <h2>Pedro hernandez</h2>
-            <p>Vendedora de Peto</p>
-        </div>
-        <nav>
-            <ul>
-                <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#">Calendario</a></li>
-                <li><a href="#">Tareas</a></li>
-                <li><a href="#">Configuración</a></li>
-            </ul>
-        </nav>
-    </div>
-
-    <!-- Main Content -->
     <div class="main-content">
         <div class="calendar-container">
             <div class="calendar-header">
@@ -99,3 +80,4 @@
     </div>
 </body>
 </html>
+
