--- a/pages/dashboard/sections/notificaciones/notificaciones.html
+++ b/pages/dashboard/sections/notificaciones/notificaciones.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="notificaciones.css">
 </head>
 <body>
     <h1>Contenido NOTIFICACIONES</h1>
-    <p>Este es el contenido de la sección de Inicio.</p>
+    <p>Este es el contenido de la sección de nofiticaciones.</p>
 </body>
 </html>
