ultima actualizacion para subir a ferrrum

--- a/pages/dashboard/sections/calendario/calendario.html
+++ b/pages/dashboard/sections/calendario/calendario.html
@@ -1,83 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="calendario.css">
-</head>
-<body>
+    <link rel="stylesheet" href="calendario.css" />
+  </head>
+  <body>
+    <!-- Contenido principal -->
     <div class="main-content">
-        <div class="calendar-container">
-            <div class="calendar-header">
-                <h1>Agosto 2024</h1>
-                <div class="controls">
-                    <button>Anterior</button>
-                    <button>Siguiente</button>
-                </div>
-            </div>
-            <table class="calendar">
-                <thead>
-                    <tr>
-                        <th>Dom</th>
-                        <th>Lun</th>
-                        <th>Mar</th>
-                        <th>Mié</th>
-                        <th>Jue</th>
-                        <th>Vie</th>
-                        <th>Sáb</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td><span class="date">1</span></td>
-                        <td><span class="date">2</span></td>
-                        <td><span class="date">3</span></td>
-                        <td><span class="date">4</span></td>
-                        <td><span class="date">5</span></td>
-                        <td><span class="date">6</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="date">7</span></td>
-                        <td><span class="date">8</span></td>
-                        <td><span class="date">9</span></td>
-                        <td><span class="date">10</span></td>
-                        <td><span class="date">11</span></td>
-                        <td><span class="date">12</span></td>
-                        <td><span class="date">13</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="date">14</span></td>
-                        <td><span class="date">15</span></td>
-                        <td><span class="date">16</span></td>
-                        <td><span class="date">17</span></td>
-                        <td><span class="date">18</span></td>
-                        <td><span class="date">19</span></td>
-                        <td><span class="date">20</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="date">21</span></td>
-                        <td><span class="date">22</span></td>
-                        <td><span class="date">23</span></td>
-                        <td><span class="date">24</span></td>
-                        <td><span class="date">25</span></td>
-                        <td><span class="date">26</span></td>
-                        <td><span class="date">27</span></td>
-                    </tr>
-                    <tr>
-                        <td><span class="date">28</span></td>
-                        <td><span class="date">29</span></td>
-                        <td><span class="date">30</span></td>
-                        <td><span class="date">31</span></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
+      <!-- Contenedor del calendario -->
+      <div class="calendar-container">
+        <!-- Encabezado del calendario con controles -->
+        <div class="calendar-header">
+          <h1>Agosto 2024</h1>
+          <div class="controls">
+            <button>Anterior</button>
+            <button>Siguiente</button>
+          </div>
         </div>
+        <!-- Tabla del calendario -->
+        <table class="calendar">
+          <thead>
+            <tr>
+              <th>Dom</th>
+              <th>Lun</th>
+              <th>Mar</th>
+              <th>Mié</th>
+              <th>Jue</th>
+              <th>Vie</th>
+              <th>Sáb</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Filas y celdas del calendario -->
+            <tr>
+              <td></td>
+              <td><span class="date">1</span></td>
+              <td><span class="date">2</span></td>
+              <td><span class="date">3</span></td>
+              <td><span class="date">4</span></td>
+              <td><span class="date">5</span></td>
+              <td><span class="date">6</span></td>
+            </tr>
+            <tr>
+              <td><span class="date">7</span></td>
+              <td><span class="date">8</span></td>
+              <td><span class="date">9</span></td>
+              <td><span class="date">10</span></td>
+              <td><span class="date">11</span></td>
+              <td><span class="date">12</span></td>
+              <td><span class="date">13</span></td>
+            </tr>
+            <tr>
+              <td><span class="date">14</span></td>
+              <td><span class="date">15</span></td>
+              <td><span class="date">16</span></td>
+              <td><span class="date">17</span></td>
+              <td><span class="date">18</span></td>
+              <td><span class="date">19</span></td>
+              <td><span class="date">20</span></td>
+            </tr>
+            <tr>
+              <td><span class="date">21</span></td>
+              <td><span class="date">22</span></td>
+              <td><span class="date">23</span></td>
+              <td><span class="date">24</span></td>
+              <td><span class="date">25</span></td>
+              <td><span class="date">26</span></td>
+              <td><span class="date">27</span></td>
+            </tr>
+            <tr>
+              <td><span class="date">28</span></td>
+              <td><span class="date">29</span></td>
+              <td><span class="date">30</span></td>
+              <td><span class="date">31</span></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-</body>
+  </body>
 </html>
-
