--- a/pages/dashboard/sections/grupos/grupos.html
+++ b/pages/dashboard/sections/grupos/grupos.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Contenido GRUPOS</h1>
     <p>Este es el contenido de la sección de grupos.</p>
+    <H4>TRABAJANDO EN ELLO...</H4>
 </body>
 </html>
