--- a/pages/dashboard/sections/home/home.html
+++ b/pages/dashboard/sections/home/home.html
@@ -1,4 +1,3 @@
-<!-- sections/home.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,5 +9,6 @@
 <body>
     <h1>Contenido Principal</h1>
     <p>Este es el contenido de la sección de Inicio.</p>
+    <H4>TRABAJANDO EN ELLO...</H4>
 </body>
 </html>
