--- a/pages/registro/registro.html
+++ b/pages/registro/registro.html
@@ -15,8 +15,6 @@
     <title>FocusED</title>
   </head>
   <body>
-    <!----------------------- CUERPO DE LA PAGINA -------------------------->
-
     <div
       class="container d-flex justify-content-center align-items-center min-vh-100"
     >
@@ -99,17 +97,17 @@
               </div>
             </div>
 
-            <!-- BOTÓN DE INICIAR SESION -->
+            <!-- BOTÓN DE REGISTRARSE -->
             <div class="text-end mb-3">
               <button class="btn btn-lg col-md-6 fs-6 boton-iniciar">
                 Registrarme
               </button>
             </div>
 
-            <!-- LINK CREAR CUENTA -->
+            <!-- LINK PARA VOLVER A LOGIN -->
             <div class="text-end">
               <small
-                >Ya tengo cuenta. <a href="/pages/login/login.html">Iniciar sesión</a></small
+                >Ya tengo cuenta. <a href="/index.html">Iniciar sesión</a></small
               >
             </div>
           </div>
