--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panel de Control</title>
+    <title>FocusED</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,6 +31,10 @@
             <h5 class="mb-1">Alejandro Torres</h5>
             <p class="mb-0">Colaborador Académico</p>
           </div>
+
+          <a href="/index.html" class="logout-icon ms-auto">
+            <i class="fas fa-sign-out-alt"></i>
+          </a>
         </div>
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -58,7 +62,7 @@
               href="sections/notificaciones/notificaciones.html"
               target="content-frame"
             >
-            <i class="fa-regular fa-bell"></i> Notificaciones
+              <i class="fa-regular fa-bell"></i> Notificaciones
             </a>
           </li>
           <hr class="divider" />
@@ -68,7 +72,7 @@
               href="sections/estadisticas/estadisticas.html"
               target="content-frame"
             >
-            <i class="fa-solid fa-chart-column"></i> Estadisticas
+              <i class="fa-solid fa-chart-column"></i> Estadisticas
             </a>
           </li>
           <li class="nav-item">
@@ -77,7 +81,7 @@
               href="sections/calendario/calendario.html"
               target="content-frame"
             >
-            <i class="fa-solid fa-calendar"></i> Calendario
+              <i class="fa-solid fa-calendar"></i> Calendario
             </a>
           </li>
         </ul>
