--- a/pages/dashboard/sections/estadisticas/estadisticas.html
+++ b/pages/dashboard/sections/estadisticas/estadisticas.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Contenido ESTADISTICAS</h1>
     <p>Este es el contenido de la sección de estadisticas.</p>
+    <H4>TRABAJANDO EN ELLO...</H4>
 </body>
 </html>
