--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -19,6 +19,7 @@
     <div class="d-flex">
       <!-- Sidebar -->
       <nav class="sidebar">
+        <!-- FOTO DE PERFIL Y NOMBRE -->
         <div
           class="user-profile d-flex align-items-center justify-content-between p-2 mb-4"
         >
@@ -36,6 +37,7 @@
             <i class="fas fa-sign-out-alt"></i>
           </a>
         </div>
+
         <ul class="nav flex-column">
           <li class="nav-item">
             <a
