--- a/pages/dashboard/sections/calendario/calendario.html
+++ b/pages/dashboard/sections/calendario/calendario.html
@@ -1,87 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="calendario.css" />
-  </head>
-  <body>
-    <!-- Contenido principal -->
-    <div class="main-content">
-      <!-- Contenedor del calendario -->
-      <div class="calendar-container">
-        <!-- Encabezado del calendario con controles -->
-        <div class="calendar-header">
-          <h1>Agosto 2024</h1>
-          <div class="controls">
-            <button>Anterior</button>
-            <button>Siguiente</button>
-          </div>
-        </div>
-        <!-- Tabla del calendario -->
-        <table class="calendar">
-          <thead>
-            <tr>
-              <th>Dom</th>
-              <th>Lun</th>
-              <th>Mar</th>
-              <th>Mié</th>
-              <th>Jue</th>
-              <th>Vie</th>
-              <th>Sáb</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Filas y celdas del calendario -->
-            <tr>
-              <td></td>
-              <td><span class="date">1</span></td>
-              <td><span class="date">2</span></td>
-              <td><span class="date">3</span></td>
-              <td><span class="date">4</span></td>
-              <td><span class="date">5</span></td>
-              <td><span class="date">6</span></td>
-            </tr>
-            <tr>
-              <td><span class="date">7</span></td>
-              <td><span class="date">8</span></td>
-              <td><span class="date">9</span></td>
-              <td><span class="date">10</span></td>
-              <td><span class="date">11</span></td>
-              <td><span class="date">12</span></td>
-              <td><span class="date">13</span></td>
-            </tr>
-            <tr>
-              <td><span class="date">14</span></td>
-              <td><span class="date">15</span></td>
-              <td><span class="date">16</span></td>
-              <td><span class="date">17</span></td>
-              <td><span class="date">18</span></td>
-              <td><span class="date">19</span></td>
-              <td><span class="date">20</span></td>
-            </tr>
-            <tr>
-              <td><span class="date">21</span></td>
-              <td><span class="date">22</span></td>
-              <td><span class="date">23</span></td>
-              <td><span class="date">24</span></td>
-              <td><span class="date">25</span></td>
-              <td><span class="date">26</span></td>
-              <td><span class="date">27</span></td>
-            </tr>
-            <tr>
-              <td><span class="date">28</span></td>
-              <td><span class="date">29</span></td>
-              <td><span class="date">30</span></td>
-              <td><span class="date">31</span></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calendario Interactivo</title>
+  <link rel="stylesheet" href="calendario.css">
+</head>
+<body>
+<div class="container">
+  <!-- Barra lateral -->
+  <div class="sidebar">
+    <h2>Mi Calendario</h2>
+    <div class="user-info">
+      <img src="profile.jpg" alt="Foto de perfil" class="profile-pic">
+      <h3>Ronald Toro Villalba</h3>
+      <p>Progreso de tareas</p>
+    </div>
+    <div class="calendar-summary">
+      <h3>Julio 2022</h3>
+      <p>Tareas completadas</p>
+      <div class="progress-bar">
+        <div class="progress"></div>
       </div>
     </div>
-  </body>
+    <div class="categories">
+      <h3>Categorías</h3>
+      <ul>
+        <li><span class="dot personal"></span>Personal</li>
+        <li><span class="dot work"></span>Trabajo</li>
+        <li><span class="dot health"></span>Salud</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Panel principal del calendario -->
+  <div class="main-panel">
+    <header>
+      <h1>Diciembre 2023</h1>
+      <nav>
+        <button>Mes</button>
+        <button>Semana</button>
+        <button>Día</button>
+        <button>Hoy</button>
+      </nav>
+    </header>
+    <div class="calendar-grid">
+      <!-- Días de la semana -->
+      <div class="day-header">Dom</div>
+      <div class="day-header">Lun</div>
+      <div class="day-header">Mar</div>
+      <div class="day-header">Mié</div>
+      <div class="day-header">Jue</div>
+      <div class="day-header">Vie</div>
+      <div class="day-header">Sáb</div>
+
+      <!-- Días del mes -->
+      <div class="day" data-day="1">1</div>
+      <div class="day" data-day="2">2</div>
+      <!-- Continua con más días -->
+    </div>
+  </div>
+
+  <!-- Panel emergente para agregar eventos -->
+  <div id="event-modal" class="modal">
+    <div class="modal-content">
+      <h2>Agregar Evento</h2>
+      <form id="event-form">
+        <label for="event-date">Fecha:</label>
+        <input type="date" id="event-date" required>
+
+        <label for="event-category">Categoría:</label>
+        <select id="event-category">
+          <option value="personal">Personal</option>
+          <option value="work">Trabajo</option>
+          <option value="health">Salud</option>
+        </select>
+
+        <label for="event-description">Descripción:</label>
+        <input type="text" id="event-description" required>
+
+        <button type="submit">Agregar Evento</button>
+      </form>
+      <button class="close-modal">&times;</button>
+    </div>
+  </div>
+</div>
+
+<script src="calendario.js"></script>
+</body>
 </html>
