modificando estilos de estadisticas y calendario

--- a/pages/dashboard/sections/calendario/calendario.html
+++ b/pages/dashboard/sections/calendario/calendario.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendario Interactivo</title>
   <link rel="stylesheet" href="calendario.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <div class="container">
   <!-- Barra lateral -->
   <div class="sidebar">
     <h2>Mi Calendario</h2>
-    <div class="user-info">
-      <img src="profile.jpg" alt="Foto de perfil" class="profile-pic">
-      <h3>Ronald Toro Villalba</h3>
+    <div class="user-info mb-3">
+      <h3 class="mb-4">Ronald Toro Villalba</h3>
       <p>Progreso de tareas</p>
     </div>
     <div class="calendar-summary">
