--- a/pages/dashboard/sections/estadisticas/estadisticas.html
+++ b/pages/dashboard/sections/estadisticas/estadisticas.html
@@ -3,40 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estadísticas de Tareas</title>
+    <title>Resumen de Tareas</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="estadisticas.css">
 </head>
 <body>
-<header>
-    <h1>Estadísticas de Tareas</h1>
-    <nav>
-        <a href="calendario.html">Volver al Calendario</a>
-    </nav>
-</header>
-<main>
-    <section class="stats-container">
-        <div class="statistic">
-            <h2>Tareas Completadas</h2>
-            <p id="completed-tasks">10/30</p>
-            <div class="progress-bar">
-                <div class="progress" style="width: 33%;"></div>
+    <div class="container my-5">
+        <div class="row g-4 justify-content-center">
+            <!-- Tarjeta 1 -->
+            <div class="col-12 col-md-3">
+                <div class="card text-center shadow-sm">
+                    <div class="card-body">
+                        <i class="bi bi-check-circle-fill icon"></i> <!-- Icono -->
+                        <h2 class="stat-value">10/30</h2>
+                        <p class="stat-label">Completadas</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Tarjeta 2 -->
+            <div class="col-12 col-md-3">
+                <div class="card text-center shadow-sm">
+                    <div class="card-body">
+                        <i class="bi bi-clock-history icon"></i> <!-- Icono -->
+                        <h2 class="stat-value">20</h2>
+                        <p class="stat-label">Pendientes</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Tarjeta 3 -->
+            <div class="col-12 col-md-3">
+                <div class="card text-center shadow-sm">
+                    <div class="card-body">
+                        <i class="bi bi-exclamation-triangle-fill icon"></i> <!-- Icono -->
+                        <h2 class="stat-value">5</h2>
+                        <p class="stat-label">Urgentes</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Tarjeta 4 -->
+            <div class="col-12 col-md-3">
+                <div class="card text-center shadow-sm">
+                    <div class="card-body">
+                        <i class="bi bi-hourglass-split icon"></i> <!-- Icono -->
+                        <h2 class="stat-value">8</h2>
+                        <p class="stat-label">En Progreso</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Tarjeta 5 -->
+            <div class="col-12 col-md-3">
+                <div class="card text-center shadow-sm">
+                    <div class="card-body">
+                        <i class="bi bi-x-circle-fill icon"></i> <!-- Icono -->
+                        <h2 class="stat-value">3</h2>
+                        <p class="stat-label">Rechazadas</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="statistic">
-            <h2>Tareas Pendientes</h2>
-            <p id="pending-tasks">20</p>
-            <div class="progress-bar">
-                <div class="progress" style="width: 67%;"></div>
-            </div>
-        </div>
-        <div class="statistic">
-            <h2>Tareas Urgentes</h2>
-            <p id="urgent-tasks">5</p>
-            <div class="progress-bar">
-                <div class="progress" style="width: 17%;"></div>
-            </div>
-        </div>
-    </section>
-</main>
+    </div>
+
 </body>
 </html>
