--- a/pages/dashboard/sections/notificaciones/notificaciones.html
+++ b/pages/dashboard/sections/notificaciones/notificaciones.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="notificaciones.css"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notificaciones</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="notification-panel"> <!-- Contenedor principal del panel de notificaciones -->
-        <div class="notification-header"> <!-- Encabezado del panel -->
-            <h2>Notificaciones</h2>
-        </div>
-        <div class="notification"> <!-- Notificación individual -->
-            <p class="notification-message">Cody solicitó unirse a Copy para Dashboard</p>
-            <span class="notification-time">Hace 2 horas • Medical Dashboard</span>
-            <div class="notification-actions"> <!-- Acciones disponibles para la notificación -->
-                <button class="btn-accept">Aceptar</button>
-                <button class="btn-deny">Rechazar</button>
-            </div>
-        </div>
-        <div class="notification"> <!-- Otra notificación -->
-            <p class="notification-message">Jonathan te recordó en Dashboard - Settings Copy</p>
-            <span class="notification-time">Hace 16 horas • Medical Dashboard</span>
-            <div class="notification-actions"> <!-- Acción de respuesta -->
-                <button class="btn-reply">Responder</button>
+    <div class="container mt-5">
+        <button class="btn btn-secondary mb-4" id="backButton">Volver</button>
+        <div class="notifications-wrapper">
+            <h1>Notificaciones</h1>
+            <div class="notifications-container">
+                <div class="notification">
+                    <div class="notification-header">
+                        <span class="notification-time">10:30 AM</span>
+                    </div>
+                    <p class="notification-text">Nueva actualización disponible.</p>
+                    <div class="notification-actions">
+                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
+                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
+                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
+                    </div>
+                </div>
+                <div class="notification unread">
+                    <div class="notification-header">
+                        <span class="notification-time">9:15 AM</span>
+                    </div>
+                    <p class="notification-text">Reunión programada para mañana.</p>
+                    <div class="notification-actions">
+                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
+                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
+                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
+                    </div>
+                </div>
+                <div class="notification unread">
+                    <div class="notification-header">
+                        <span class="notification-time">8:45 AM</span>
+                    </div>
+                    <p class="notification-text">Nuevo mensaje en tu bandeja de entrada.</p>
+                    <div class="notification-actions">
+                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
+                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
+                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
+                    </div>
+                </div>
+                <div class="notification">
+                    <div class="notification-header">
+                        <span class="notification-time">Yesterday</span>
+                    </div>
+                    <p class="notification-text">Tu contraseña ha sido actualizada.</p>
+                    <div class="notification-actions">
+                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
+                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
+                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
+                    </div>
+                </div>
+                <!-- Añade más notificaciones aquí -->
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
