modificando estadisticas y notificaciones

--- a/pages/dashboard/sections/notificaciones/notificaciones.html
+++ b/pages/dashboard/sections/notificaciones/notificaciones.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notificaciones</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="notificaciones.css" />
+  </head>
+  <body>
     <div class="container mt-5">
-        <button class="btn btn-secondary mb-4" id="backButton">Volver</button>
-        <div class="notifications-wrapper">
-            <h1>Notificaciones</h1>
-            <div class="notifications-container">
-                <div class="notification">
-                    <div class="notification-header">
-                        <span class="notification-time">10:30 AM</span>
-                    </div>
-                    <p class="notification-text">Nueva actualización disponible.</p>
-                    <div class="notification-actions">
-                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
-                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
-                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
-                    </div>
-                </div>
-                <div class="notification unread">
-                    <div class="notification-header">
-                        <span class="notification-time">9:15 AM</span>
-                    </div>
-                    <p class="notification-text">Reunión programada para mañana.</p>
-                    <div class="notification-actions">
-                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
-                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
-                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
-                    </div>
-                </div>
-                <div class="notification unread">
-                    <div class="notification-header">
-                        <span class="notification-time">8:45 AM</span>
-                    </div>
-                    <p class="notification-text">Nuevo mensaje en tu bandeja de entrada.</p>
-                    <div class="notification-actions">
-                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
-                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
-                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
-                    </div>
-                </div>
-                <div class="notification">
-                    <div class="notification-header">
-                        <span class="notification-time">Yesterday</span>
-                    </div>
-                    <p class="notification-text">Tu contraseña ha sido actualizada.</p>
-                    <div class="notification-actions">
-                        <button class="btn btn-success btn-sm mark-read">Marcar como leída</button>
-                        <button class="btn btn-warning btn-sm mark-unread">Marcar como no leída</button>
-                        <button class="btn btn-danger btn-sm delete">Eliminar</button>
-                    </div>
-                </div>
+      <div class="notifications-wrapper">
+        <div class="row notifications-container">
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card notification">
+              <div class="card-body">
+                <h5 class="card-title">10:30 AM</h5>
+                <p class="card-text">Nueva actualización disponible.</p>
+              </div>
+              <div class="card-footer notification-actions">
+                <button class="btn btn-success btn-sm">Leída</button>
+                <button class="btn btn-danger btn-sm">Eliminar</button>
+              </div>
             </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card notification unread">
+              <div class="card-body">
+                <h5 class="card-title">9:15 AM</h5>
+                <p class="card-text">Reunión programada para mañana.</p>
+              </div>
+              <div class="card-footer notification-actions">
+                <button class="btn btn-success btn-sm">Leída</button>
+                <button class="btn btn-danger btn-sm">Eliminar</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card notification unread">
+              <div class="card-body">
+                <h5 class="card-title">8:45 AM</h5>
+                <p class="card-text">Nuevo mensaje en tu bandeja de entrada.</p>
+              </div>
+              <div class="card-footer notification-actions">
+                <button class="btn btn-success btn-sm">Leída</button>
+                <button class="btn btn-danger btn-sm">Eliminar</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="card notification">
+              <div class="card-body">
+                <h5 class="card-title">Ayer</h5>
+                <p class="card-text">Tu contraseña ha sido actualizada.</p>
+              </div>
+              <div class="card-footer notification-actions">
+                <button class="btn btn-success btn-sm">Leída</button>
+                <button class="btn btn-danger btn-sm">Eliminar</button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
