--- a/pages/dashboard/sections/estadisticas/estadisticas.html
+++ b/pages/dashboard/sections/estadisticas/estadisticas.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="estadisticas.css">
 </head>
 <body>
-    <div class="container my-5">
+    <div class="container">
         <div class="row g-4 justify-content-center">
             <!-- Tarjeta 1 -->
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="card text-center shadow-sm">
                     <div class="card-body">
                         <i class="bi bi-check-circle-fill icon"></i> <!-- Icono -->
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <!-- Tarjeta 2 -->
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="card text-center shadow-sm">
                     <div class="card-body">
                         <i class="bi bi-clock-history icon"></i> <!-- Icono -->
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <!-- Tarjeta 3 -->
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="card text-center shadow-sm">
                     <div class="card-body">
                         <i class="bi bi-exclamation-triangle-fill icon"></i> <!-- Icono -->
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <!-- Tarjeta 4 -->
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="card text-center shadow-sm">
                     <div class="card-body">
                         <i class="bi bi-hourglass-split icon"></i> <!-- Icono -->
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <!-- Tarjeta 5 -->
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="card text-center shadow-sm">
                     <div class="card-body">
                         <i class="bi bi-x-circle-fill icon"></i> <!-- Icono -->
