--- a/pages/dashboard/sections/home/home.html
+++ b/pages/dashboard/sections/home/home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="home.css">
-</head>
-<body>
-    <h1>Contenido Principal</h1>
-    <p>Este es el contenido de la sección de Inicio.</p>
-    <H4>TRABAJANDO EN ELLO...</H4>
-</body>
+    <title>Dashboard</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="home.css" />
+  </head>
+  <body></body>
 </html>
