--- a/pages/dashboard/sections/grupos/grupos.html
+++ b/pages/dashboard/sections/grupos/grupos.html
@@ -1,15 +1,112 @@
-<!-- sections/home.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="grupos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Detalles del Grupo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #2c2c2c;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    .group-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #424242;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    }
+    table {
+      width: 100%;
+      color: white;
+    }
+    table, th, td {
+      border-collapse: collapse;
+    }
+    th, td {
+      padding: 15px;
+      text-align: left;
+    }
+    th {
+      background-color: #424242;
+    }
+    td {
+      background-color: #383838;
+    }
+    .btn-task {
+      background-color: #616161;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .btn-task:hover {
+      background-color: #757575;
+    }
+  </style>
 </head>
 <body>
-    <h1>Contenido GRUPOS</h1>
-    <p>Este es el contenido de la sección de grupos.</p>
-    <H4>TRABAJANDO EN ELLO...</H4>
+  <div class="container mt-5">
+    <div class="group-header">
+      <h1>NOMBRE DEL GRUPO</h1>
+      <div>
+        <span>MIEMBROS: 4</span>
+        <button class="btn-task ms-3">AGREGAR TAREA</button>
+      </div>
+    </div>
+
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th>Estado</th>
+          <th>Descripción</th>
+          <th>Prioridad</th>
+          <th>Categoría</th>
+          <th>Fecha de Creación</th>
+          <th>Responsable</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Completar informe</td>
+          <td>Alta</td>
+          <td>Proyecto</td>
+          <td>01/08/2024</td>
+          <td>Juan Pérez</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Preparar presentación</td>
+          <td>Media</td>
+          <td>Estudio</td>
+          <td>05/08/2024</td>
+          <td>Ana Gómez</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Actualizar sitio web</td>
+          <td>Alta</td>
+          <td>Proyecto</td>
+          <td>02/08/2024</td>
+          <td>Luis Rodríguez</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Enviar reportes mensuales</td>
+          <td>Baja</td>
+          <td>Informe</td>
+          <td>01/08/2024</td>
+          <td>Marta Díaz</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
