cambios en estilos

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -52,10 +52,10 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="sections/grupos/grupos.html"
+              href="sections/mis_grupos/misgrupos.html"
               target="content-frame"
             >
-              <i class="fas fa-users"></i> Mis Grupos
+              <i class="fas fa-users"></i>Mis Grupos
             </a>
           </li>
           <li class="nav-item">
