--- a/pages/dashboard/sections/mis_grupos/misgrupos.html
+++ b/pages/dashboard/sections/mis_grupos/misgrupos.html
@@ -5,15 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mis Grupos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
+  <link rel="stylesheet" href="/style.css"> 
+  <link rel="stylesheet" href="misgrupos.css"> 
 </head>
 <body>
   <div class="container mt-5">
-    <div class="title">
-      <h1>Mis Grupos</h1>
-    </div>
     <div class="row mt-4">
-      <!-- Grupo 1 -->
       <div class="col-md-4">
         <div class="group-card">
           <h4>Grupo 1</h4>
@@ -21,7 +18,6 @@
           <button class="btn-group-view" onclick="location.href='grupo.html'">Ver Grupo</button>
         </div>
       </div>
-      <!-- Grupo 2 -->
       <div class="col-md-4">
         <div class="group-card">
           <h4>Grupo 2</h4>
@@ -29,7 +25,6 @@
           <button class="btn-group-view" onclick="location.href='grupo.html'">Ver Grupo</button>
         </div>
       </div>
-      <!-- Grupo 3 -->
       <div class="col-md-4">
         <div class="group-card">
           <h4>Grupo 3</h4>
