--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -1,103 +1,104 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FocusED</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="dashboard.css" />
-  </head>
-  <body>
-    <div class="d-flex">
-      <!-- Sidebar -->
-      <nav class="sidebar">
-        <!-- FOTO DE PERFIL Y NOMBRE -->
-        <div
-          class="user-profile d-flex align-items-center justify-content-between p-2 mb-4"
-        >
-          <img
-            src="/images/foto-perfil.jpg"
-            alt="User"
-            class="profile-pic rounded-circle"
-          />
-          <div class="user-info text-white ms-2">
-            <h5 class="mb-1">Alejandro Torres</h5>
-            <p class="mb-0">Colaborador Académico</p>
-          </div>
-
-          <a href="/index.html" class="logout-icon ms-auto">
-            <i class="fas fa-sign-out-alt"></i>
-          </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FocusED</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="dashboard.css" />
+</head>
+<body>
+  <div class="d-flex">
+    <!-- Sidebar -->
+    <nav class="sidebar">
+      <!-- FOTO DE PERFIL Y NOMBRE -->
+      <div
+        class="user-profile d-flex align-items-center justify-content-between p-2 mb-4"
+      >
+        <img
+          src="/images/foto-perfil.jpg"
+          alt="User"
+          class="profile-pic rounded-circle"
+        />
+        <div class="user-info text-white ms-2">
+          <h5 class="mb-1">Alejandro Torres</h5>
+          <p class="mb-0">Colaborador Académico</p>
         </div>
-
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="sections/home/home.html"
-              target="content-frame"
-            >
-              <i class="fas fa-home"></i> Inicio
-            </a>
-          </li>
-          <hr class="divider" />
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="sections/mis_grupos/misgrupos.html"
-              target="content-frame"
-            >
-              <i class="fas fa-users"></i>Mis Grupos
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="sections/notificaciones/notificaciones.html"
-              target="content-frame"
-            >
-              <i class="fa-regular fa-bell"></i> Notificaciones
-            </a>
-          </li>
-          <hr class="divider" />
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="sections/estadisticas/estadisticas.html"
-              target="content-frame"
-            >
-              <i class="fa-solid fa-chart-column"></i> Estadisticas
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="sections/calendario/calendario.html"
-              target="content-frame"
-            >
-              <i class="fa-solid fa-calendar"></i> Calendario
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <!-- Main Content -->
-      <div class="main-content flex-grow-1">
-        <iframe
-          name="content-frame"
-          src="/pages/dashboard/sections/home/home.html"
-          frameborder="0"
-          style="width: 100%; height: 100%; border: none"
-        ></iframe>
+        <a href="/" class="logout-icon ms-auto">
+          <i class="fas fa-sign-out-alt"></i>
+        </a>
       </div>
+
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="sections/home/home.html"
+            target="content-frame"
+            onclick=""
+          >
+            <i class="fas fa-home" style="color: #BDC3C7;"></i> Inicio
+          </a>
+        </li>
+        <hr class="divider" />
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="sections/mis_grupos/misgrupos.html"
+            target="content-frame"
+          >
+            <i class="fas fa-users" style="color: #BDC3C7;"></i> Mis Grupos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="sections/notificaciones/notificaciones.html"
+            target="content-frame"
+          >
+            <i class="fas fa-bell" style="color: #BDC3C7;"></i> Notificaciones
+          </a>
+        </li>
+        <hr class="divider" />
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="sections/estadisticas/estadisticas.html"
+            target="content-frame"
+          >
+            <i class="fas fa-chart-bar" style="color: #BDC3C7;"></i> Estadísticas
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="sections/calendario/calendario.html"
+            target="content-frame"
+          >
+            <i class="fas fa-calendar-days" style="color: #BDC3C7;"></i> Calendario
+          </a>
+        </li>
+        
+      </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="main-content flex-grow-1">
+      <iframe
+        name="content-frame"
+        src="sections/home/home.html"
+        frameborder="0"
+        style="width: 100%; height: 100%; border: none"
+      ></iframe>
     </div>
-  </body>
+  </div>
+</body>
 </html>
