--- a/pages/dashboard/sections/mis_grupos/misgrupos.html
+++ b/pages/dashboard/sections/mis_grupos/misgrupos.html
@@ -1,39 +1,177 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mis Grupos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css"> 
-  <link rel="stylesheet" href="misgrupos.css"> 
-</head>
-<body>
-  <div class="container mt-5">
-    <div class="row mt-4">
-      <div class="col-md-4">
-        <div class="group-card">
-          <h4>Grupo 1</h4>
-          <p>Descripción del grupo 1.</p>
-          <button class="btn-group-view" onclick="location.href='grupo.html'">Ver Grupo</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mis Grupos</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="misgrupos.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!-- Barra superior con información y botón de crear, ocupando todo el ancho -->
+    <div class="barra-superior mb-4">
+      <div class="d-flex justify-content-between align-items-center">
+        <!-- Información de grupos y tareas -->
+        <div class="d-flex">
+          <span class="me-4">
+            <i class="fas fa-users"></i> Grupos Totales: 5
+          </span>
+          <span class="me-4">
+            <i class="fas fa-tasks"></i> Tareas Pendientes: 10
+          </span>
+        </div>
+        <!-- Botón de crear grupo -->
+        <a href="crear_grupo.html" class="btn-crear-grupo">
+          <i class="fas fa-plus-circle"></i> Crear Grupo
+        </a>
+      </div>
+    </div>
+
+    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4">
+      <!-- Card 1 -->
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Estudio</h5>
+            <p class="card-text">
+              Este grupo está enfocado en estudiar para los exámenes finales de la carrera.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 3
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="group-card">
-          <h4>Grupo 2</h4>
-          <p>Descripción del grupo 2.</p>
-          <button class="btn-group-view" onclick="location.href='grupo.html'">Ver Grupo</button>
+
+      <!-- Card 2 -->
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Proyecto</h5>
+            <p class="card-text">
+              Este grupo está trabajando en un proyecto de desarrollo de software.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 5
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="group-card">
-          <h4>Grupo 3</h4>
-          <p>Descripción del grupo 3.</p>
-          <button class="btn-group-view" onclick="location.href='grupo.html'">Ver Grupo</button>
+
+      <!-- Card 3 -->
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Grupo de Diseño</h5>
+            <p class="card-text">
+              Un grupo que se dedica a crear prototipos y diseños para proyectos de la universidad.
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="members-info">
+                <i class="fas fa-users"></i> 4
+              </div>
+              <a href="ver_grupo.html" class="btn btn-ver btn-sm">Ver más</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
